Updates to instructions

--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -150,7 +150,16 @@
    "source": [
     "You should be able to work out that the crystal structure features four copies of the Abl protein, each with one molecule of Imatinib bound to it. Each has it's own collection of water molecules too. For now, we are going to assume that it's only the first of these copies (chain 'A') that we want to start building our simulation system.\n",
     "\n",
-    "The CBA tool *fix*, which uses [pdbfixer](https://github.com/openmm/pdbfixer), can be used to do this. It requires the name of the PDB file to fix, a name for the 'fixed' file, a list of the chains to keep, and a decision as to whether any missing residues at the N- and C-terminii should be ignored (trim=True), or reconstructed as well (trim=False)."
+    "What you probably can't see straight away is that there are some significant issues with this crystal structure. There are quite a few atoms that ought to be there, but aren't because they could not be seen in the experimental electron density. This results in some amino acid side chains being incomplete (e.g. a histidine sidechain - left panel below), and even some entire residues being absent, creating 'gaps' in the protein chain (right). \n",
+    "\n",
+    "|Missing side chain atoms|Missing residue|\n",
+    "|---------------------|------------------|\n",
+    "|![histidine](his.png)|![a gap](gap.png) |\n",
+    "\n",
+    "\n",
+    "For simulation purposes, these missing atoms must be reintroduced somehow. The CBA tool *fix*, which uses [pdbfixer](https://github.com/openmm/pdbfixer), can be used to do this. It requires the name of the PDB file to fix, a name for the 'fixed' file, a list of the chains to keep, and a decision as to whether any missing residues at the N- and C-terminii should be ignored (trim=True), or reconstructed as well (trim=False).\n",
+    "\n",
+    "In the cell below you can see we have decided to use chain 'A\", won't bother to reconstruct missing N- and C-terminal residues, and will call the remediated PDB file 'abl_imatinib_heavy.pdb' (because it should be complete at the heavy atom level, though still missing hydrogens):"
    ]
   },
   {
@@ -185,6 +194,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf1f0d9c-1afd-448e-b81f-bac990408080",
+   "metadata": {},
+   "source": [
+    "Take a good look, and convince yourself that the process has worked. Be aware that though `fix` works pretty well, it's not guaranteed to be perfect every time. You should always check the produced structure very carefully."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7fbfbee8-1382-45a3-8864-d0d97d9bd315",
    "metadata": {},
    "source": [
@@ -196,9 +213,9 @@
    "id": "35fba535-ce08-427b-82e2-9a98dbeeefa6",
    "metadata": {},
    "source": [
-    "The next step is to add hydrogen atoms. There are a variety of methods to do this more-or-less automatically, but none is perfect. Here we will use the CBA tool *add_h*, which in turn uses the [addh](https://www.cgl.ucsf.edu/chimerax/docs/user/commands/addh.html) utility built into *ChimeraX*. \n",
+    "The next step is to add hydrogen atoms. There are a variety of methods to do this more-or-less automatically, but none is perfect. Here we will use the CBA tool *add_h*, which in turn uses the [addh](https://www.cgl.ucsf.edu/chimerax/docs/user/commands/addh.html) utility built into *Chimera*. \n",
     "\n",
-    "It requires the names for the input and output PDB files, the name for the command which launches *ChimeraX*, and a decision as to whether you want the protein residue names to be modified to fit AMBER conventions or not (e.g. change the names of histidine residues from HIS to HID, HIE, or HIP according to what hydrogen atoms have been added to them)."
+    "It requires the names for the input and output PDB files, the name for the command which launches *Chimera*, and a decision as to whether you want the protein residue names to be modified to fit AMBER conventions or not (e.g. change the names of histidine residues from HIS to HID, HIE, or HIP according to what hydrogen atoms have been added to them)."
    ]
   },
   {
@@ -208,7 +225,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_h('abl_imatinib_heavy.pdb', 'abl_imatinib_amber.pdb', chimerax='chimerax', mode='amber')"
+    "add_h('abl_imatinib_heavy.pdb', 'abl_imatinib_amber.pdb', \n",
+    "      chimera='/Applications/Chimera.app/Contents/MacOS/chimera',\n",
+    "      mode='amber')"
    ]
   },
   {
@@ -236,7 +255,11 @@
    "id": "3f417eb1-09f7-467a-9fed-82cbfe16636f",
    "metadata": {},
    "source": [
-    "If you zoom in on the ligand, you should be able to see the hydrogen atoms now attached to it. Although not shown, all protein hydrogen atoms have also been added."
+    "If you zoom in on the ligand, you should be able to see the hydrogen atoms now attached to it. Look carefully and you will see that both nitrogen atoms in the piperidine ring are predicted to be protonated, so overall the imatinib molecule has a charge of +2. If you click on one of the imatinib atoms, you will also see that the residue name for it is 'STI'. You will need both of these bits of information for the next step.  \n",
+    "\n",
+    "Although not shown, all protein hydrogen atoms have also been added.\n",
+    "\n",
+    "Again the same caveats as last time: `addh` generally does a good job but it's not guaranteed. Check the resulting structure very carefully."
    ]
   },
   {
@@ -285,7 +308,19 @@
    "source": [
     "param('abl_imatinib_amber.pdb', 'abl_imatinib.prmtop', 'abl_imatinib.inpcrd', \n",
     "      het_names=['STI'], het_charges=[2],\n",
-    "      solvate='box', buffer=10.0)"
+    "      solvate='oct', buffer=10.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd63040a-1476-41e5-b47b-10ebc63747c1",
+   "metadata": {},
+   "source": [
+    "(This cell may take quite a time to run.)\n",
+    "\n",
+    "You will notice that in addition to the files 'abl_imatinib.prmtop' and 'abl_imatinib.inpcrd', the process has generated two extra files: 'STI.mol2' and 'STI.frcmod'. These contain the parameterization data for the imatinib molecule that was generated as part of the process. \n",
+    "\n",
+    "You don't need these to run future simulations, but, as before, `param` is not perfect and it is a good idea to check them (the .mol2 file contains information about the atom and bond types assigned, the .frcmod file lists non-standard force field parameters that have been inferred). "
    ]
   },
   {
@@ -293,7 +328,7 @@
    "id": "0e83db97-557f-48ca-ae7d-b2db7b3862a9",
    "metadata": {},
    "source": [
-    "Check the result:"
+    "Visualize the result, which is your 'simulation-ready' system:"
    ]
   },
   {
@@ -311,228 +346,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9c7286b-1f9e-4cb9-a63d-b1f713d63fbf",
+   "metadata": {},
+   "source": [
+    "As you rotate the view you will be able to appreciate the shape and size of the periodic box of water that has been added. You can re-run `param` with 'solvate=\"box\"' or 'solvate=\"cube\"' to see the effect of these options, and experiment with changing the value of \"buffer\" too (it's in Angstroms)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5b61f2af-a582-4441-bfe7-675403b4d7eb",
    "metadata": {},
    "source": [
     "# Next Steps\n",
     "In the next workbook, you will use these files to start some MD simulations using AMBER."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2bac347e-f9f7-455a-9769-f921a4d9d37a",
-   "metadata": {
-    "id": "10"
-   },
-   "source": [
-    "With the `Interchange` object made, we can prepare everything that OpenMM needs:\n",
-    "* A [`Simulation`](http://docs.openmm.org/latest/api-python/generated/openmm.app.simulation.Simulation.html#openmm.app.simulation.Simulation) object containing:\n",
-    "  * An `openmm.System`\n",
-    "  * A topology (`openmm.app.Topology`)\n",
-    "  * Positions and box vectors\n",
-    "* A barostat, since we want to use NPT dynamics to relax the box size toward equilibrium\n",
-    "* An integrator\n",
-    "* Reporters for the trajectory (coordinates as a function of time) and simulation data (energies, temperature, density, etc. as a function of time)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9be09aa6-c1dc-427c-9302-be201e48a5e9",
-   "metadata": {},
-   "source": [
-    "## 3.1 Import required packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "057eee9d-feb3-4fec-a319-ea24e5dbeb26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import numpy\n",
-    "\n",
-    "import openmm\n",
-    "import openmm.app\n",
-    "import openmm.unit\n",
-    "\n",
-    "from mdtraj.reporters import NetCDFReporter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd91669f-8f46-4ffa-a0dd-9626316eea22",
-   "metadata": {},
-   "source": [
-    "## 3.2 Create the OpenMM Simulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98b3a913-3c27-4fcc-903e-b5201bdd3a4c",
-   "metadata": {
-    "id": "10"
-   },
-   "source": [
-    "For convenience, let's wrap some boilerplate code into a function that can be called again later with different inputs. We won't discuss the details of what's here - refer to OpenMM's excellent guides and tutorials for this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {
-    "id": "11"
-   },
-   "outputs": [],
-   "source": [
-    "def create_simulation(\n",
-    "    inpcrdfile: str,\n",
-    "    prmtopfile: str,\n",
-    "    trajectory_stride: int = 500,\n",
-    "    trajectory_name: str = \"trajectory.nc\",\n",
-    "    log_name: str = \"log.csv\"\n",
-    ") -> openmm.app.Simulation:\n",
-    "    \n",
-    "    inpcrd = openmm.app.AmberInpcrdFile(inpcrdfile)\n",
-    "    prmtop = openmm.app.AmberPrmtopFile(prmtopfile, periodicBoxVectors=inpcrd.boxVectors)\n",
-    "    integrator = openmm.LangevinIntegrator(\n",
-    "        300 * openmm.unit.kelvin,\n",
-    "        1 / openmm.unit.picosecond,\n",
-    "        1 * openmm.unit.femtoseconds,\n",
-    "    )\n",
-    "\n",
-    "    barostat = openmm.MonteCarloBarostat(\n",
-    "        1.0 * openmm.unit.bar,\n",
-    "        293.15 * openmm.unit.kelvin,\n",
-    "        25,\n",
-    "    )\n",
-    "    system = prmtop.createSystem(nonbondedMethod=openmm.app.PME,\n",
-    "                                 nonbondedCutoff=1*openmm.unit.nanometer,\n",
-    "                                 constraints=openmm.app.HBonds)\n",
-    "    system.addForce(barostat)\n",
-    "    \n",
-    "    simulation = openmm.app.Simulation(prmtop.topology, system, integrator)\n",
-    "    simulation.context.setPositions(inpcrd.positions)\n",
-    "\n",
-    "    # https://github.com/openmm/openmm/issues/3736#issuecomment-1217250635\n",
-    "    simulation.minimizeEnergy()\n",
-    "\n",
-    "    simulation.context.setVelocitiesToTemperature(300 * openmm.unit.kelvin)\n",
-    "\n",
-    "    netcdf_reporter = NetCDFReporter(trajectory_name, trajectory_stride)\n",
-    "    state_data_reporter = openmm.app.StateDataReporter(\n",
-    "        log_name,\n",
-    "        10,\n",
-    "        step=True,\n",
-    "        potentialEnergy=True,\n",
-    "        temperature=True,\n",
-    "        density=True,\n",
-    "    )\n",
-    "    simulation.reporters.append(netcdf_reporter)\n",
-    "    simulation.reporters.append(state_data_reporter)\n",
-    "\n",
-    "    return simulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "039356ec-8981-4af0-b65a-43fe19f63d16",
-   "metadata": {
-    "id": "039356ec-8981-4af0-b65a-43fe19f63d16"
-   },
-   "source": [
-    "We can now create our simulation, set-up so that simulation reporters are saved in the file <code>log_name</code>."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {
-    "id": "12"
-   },
-   "outputs": [],
-   "source": [
-    "simulation = create_simulation('abl_sti.inpcrd', 'abl_sti.prmtop',\n",
-    "                               log_name=\"abl_solvated.csv\",\n",
-    "                               trajectory_name=\"abl_solvated.nc\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1cb48b99-5e38-4856-9f78-33ace42ce8b1",
-   "metadata": {},
-   "source": [
-    "## 3.3 Run the simulation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13",
-   "metadata": {
-    "id": "13"
-   },
-   "source": [
-    "Finally, we can run this simulation. To avoid copy-pasting code, let's first wrap everything up into a function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {
-    "id": "14"
-   },
-   "outputs": [],
-   "source": [
-    "def run_simulation(simulation: openmm.app.Simulation, n_steps: int = 5000):\n",
-    "    print(\"Starting simulation\")\n",
-    "    start_time = time.process_time()\n",
-    "\n",
-    "    print(\"Step, volume (nm^3)\")\n",
-    "\n",
-    "    for step in range(n_steps):\n",
-    "        simulation.step(1)\n",
-    "        if step % 5000 == 0: # print box volume every 5000 steps\n",
-    "            box_vectors = simulation.context.getState().getPeriodicBoxVectors()\n",
-    "            print(step, numpy.linalg.det(box_vectors._value).round(3))\n",
-    "\n",
-    "    end_time = time.process_time()\n",
-    "    print(f\"Elapsed time: {(end_time - start_time):.2f} seconds\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15",
-   "metadata": {
-    "id": "15"
-   },
-   "source": [
-    "Time to run the simulation! This should take approximately 30-60 seconds on a laptop or small workstation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {
-    "id": "16"
-   },
-   "outputs": [],
-   "source": [
-    "run_simulation(simulation, 50000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b9e27ff-ffde-408a-899a-0886f80e5407",
-   "metadata": {
-    "id": "3b9e27ff-ffde-408a-899a-0886f80e5407"
-   },
-   "source": [
-    "This will generate a file called <code>abl_solvated.csv</code>, featuring all the reporters we initialized in the function <code>create_simulation</code> we created above, and a file <code>abl_solvated.nc</code>, with snapshots of the system every 500 timesteps."
    ]
   }
  ],
