Bugfixing hydrogen atom addition logic

--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -85,7 +85,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5493e818-1bc6-40a0-9ee7-1baf7317a227",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from cba_tools import smiles_to_pdb\n",
@@ -123,7 +127,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b1dea6b-afa4-48ea-b3e6-b9080f401cbc",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "ligand_smiles = 'c1ccc(NC(=O)c2ccc(CN3CCN(C)CC3)cc2)cc1Nc1nccc(-c2ccncc2)n1'\n",
@@ -143,7 +151,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3e673c40-feb0-451d-93d1-84160d66f7d9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "traj = mdt.load('ligand_ph7.pdb')\n",
@@ -201,7 +213,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1cb29cbe-db0f-4091-a50b-9908b70d3815",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from cba_tools import fix, add_h"
@@ -231,7 +247,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e26154fa-a8e3-47bd-ada8-1973b6f49db9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "pdb2hyy = mdt.load('2hyy.pdb')\n",
@@ -263,7 +283,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6debbb71-4020-4e0e-8741-72adf081cbba",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fix('2hyy.pdb', 'abl_imatinib_heavy.pdb', keep_chains=['A'], trim=True)"
@@ -283,7 +307,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dff3e337-f2c4-47be-a3de-cbbcd8fc2cd2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "abl_imatinib = mdt.load('abl_imatinib_heavy.pdb')\n",
@@ -307,7 +335,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dafc1059-dc62-40d5-a3d3-afdc97bf500f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "abl = abl_imatinib.atom_slice(abl_imatinib.topology.select('protein'))\n",
@@ -347,11 +379,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17d6daab-1002-4f55-a12b-5a0cce51205c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "add_h('abl_heavy.pdb', 'abl_amber.pdb', \n",
-    "      chimera='/Applications/Chimera.app/Contents/MacOS/chimera',\n",
+    "      chimera='chimerax',\n",
     "      mode='amber')\n",
     "abl_amber = mdt.load('abl_amber.pdb')\n",
     "view2 = nv.show_mdtraj(abl_amber)\n",
@@ -399,7 +435,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "996e9ef3-99a3-4ca6-916b-4139f00045b5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from cba_tools import param"
@@ -417,7 +457,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "07550b86-6ef7-429d-989f-9b8f38095867",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "abl = mdt.load_pdb('abl_amber.pdb', standard_names=False)\n",
@@ -463,7 +507,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66d0a504-42e0-48b1-8cc8-7bb640da8711",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "param('abl_ligand.pdb', 'abl_ligand.prmtop', 'abl_ligand.inpcrd', \n",
@@ -483,7 +531,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a42639af-ef8d-437f-b7d6-db786b44ed42",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "system = mdt.load('abl_ligand.inpcrd', top='abl_ligand.prmtop')\n",
@@ -514,7 +566,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6cc0df7b-169b-49d6-b30e-c095276b4c0a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
