Make fix more verbose

--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -107,7 +107,7 @@
     "The structures of Imatinib, and our Imatinib analogue, are show below (can you spot the differences?):\n",
     "\n",
     "\n",
-    "![imatinib and analogue](imatinib_analogue2.png)\n",
+    "![imatinib and analogue](imatinib_analogue.png)\n",
     "\n",
     "We begin with a description of the molecular structure of our imatinib analogue in the form of a SMILES string (so effectively a '1D' representation of the  structure:\n",
     "\n",
@@ -486,7 +486,7 @@
    "source": [
     "param('abl_ligand.pdb', 'abl_ligand.prmtop', 'abl_ligand.inpcrd', \n",
     "      het_names=['UNL'], het_charges=[2],\n",
-    "      solvate='box', buffer=10.0)"
+    "      solvate='oct', buffer=10.0)"
    ]
   },
   {
