--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traj = mdt.load('ligand_ph7.pdb')\n",
+    "traj = mdt.load('ligand_pH7.pdb')\n",
     "view = nv.show_mdtraj(traj)\n",
     "view"
    ]
