--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -107,7 +107,7 @@
     "The structures of Imatinib, and our Imatinib analogue, are show below (can you spot the differences?):\n",
     "\n",
     "\n",
-    "![imatinib and analogue](imatinib_analogue.png)\n",
+    "![imatinib and analogue](images/imatinib_analogue.png)\n",
     "\n",
     "We begin with a description of the molecular structure of our imatinib analogue in the form of a SMILES string (so effectively a '1D' representation of the  structure:\n",
     "\n",
@@ -242,7 +242,7 @@
     "\n",
     "|Missing side chain atoms|Missing residue|\n",
     "|---------------------|------------------|\n",
-    "|![histidine](his.png)|![a gap](gap.png) |\n",
+    "|![histidine](images/his.png)|![a gap](images/gap.png) |\n",
     "\n",
     "\n",
     "For simulation purposes, these missing atoms must be reintroduced somehow. The CBA tool *fix*, which uses [pdbfixer](https://github.com/openmm/pdbfixer), can be used to do this. It requires the name of the PDB file to fix, a name for the 'fixed' file it will generate, a list of the chains to keep, and a decision as to whether any missing residues at the N- and C-terminii should be ignored (trim=True), or reconstructed as well (trim=False).\n",
@@ -468,7 +468,7 @@
     "\n",
     "The options for the periodic box of solvent are \"box\", \"cube\", and \"oct\" (truncated octahedron). The figure below summarizes the differences:\n",
     "\n",
-    "![boxes](boxes.png)\n",
+    "![boxes](images/boxes.png)\n",
     "\n",
     "\"Box\" adds the least solvent to satisfy the \"buffer\" criterion (white arrows), but if the solute (orange) rotates in the box, it may extend beyond it. \"Cube\" solves this, but means adding more water (so more atoms and a slower simulation). \"Oct\" reduces the number of waters required but still is safe for rotation of the solute.\n",
     "\n",
