Add Alphafold-powered protein remediation tools

--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cba_tools import fix, add_h"
+    "from cba_tools import alpha_loopfix, complete"
    ]
   },
   {
@@ -245,9 +245,9 @@
     "|![histidine](images/his.png)|![a gap](images/gap.png) |\n",
     "\n",
     "\n",
-    "For simulation purposes, these missing atoms must be reintroduced somehow. The CBA tool *fix*, which uses [pdbfixer](https://github.com/openmm/pdbfixer), can be used to do this. It requires the name of the PDB file to fix, a name for the 'fixed' file it will generate, a list of the chains to keep, and a decision as to whether any missing residues at the N- and C-terminii should be ignored (trim=True), or reconstructed as well (trim=False).\n",
+    "For simulation purposes, as well as extracting just the \"interesting\" protein chain from this PDB file (which can be done using `mdtraj`), these missing atoms must be reintroduced somehow. The CBA tools *alpha_loopfix*, which uses [Alphafold](https://www.alphafold.ebi.ac.uk/) via [ChimeraX](https://www.cgl.ucsf.edu/chimerax/), can be used to fill in the gaps. Then the CBA tool *complete* can be used to add all remaining missing heavy atoms, and add hydrogen atoms as well.\n",
     "\n",
-    "In the cell below you can see we have decided to use chain 'A\", won't bother to reconstruct missing N- and C-terminal residues, and will call the remediated PDB file 'abl_imatinib_heavy.pdb' (because it should be complete at the heavy atom level, though still missing hydrogens):"
+    "In the cell below you will see all three steps being run:"
    ]
   },
   {
@@ -257,7 +257,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fix('2hyy.pdb', 'abl_imatinib_heavy.pdb', keep_chains=['A'], trim=True)"
+    "# Extract a single copy of the protein (chain A): \n",
+    "selection = pdb2hyy.topology.select('chainid 0 and protein')\n",
+    "protein_A = pdb2hyy.atom_slice(selection)\n",
+    "protein_A.save('abl_with_gaps.pdb')\n",
+    "# Use Alphafold to fill in any gaps ('loops'):\n",
+    "alpha_loopfix('abl_with_gaps.pdb', 'abl_nogaps.pdb')\n",
+    "# Use complete to add all missing heavy and hydrogen atoms:\n",
+    "complete('abl_nogaps.pdb', 'abl_complete.pdb')"
    ]
   },
   {
@@ -265,7 +272,7 @@
    "id": "ffe080a0-1d04-4680-9a45-5f3724bbffbd",
    "metadata": {},
    "source": [
-    "The messages tell you that the most significant thing is that a missing residue (Glu at position 40) has been regenerated.\n",
+    "The output tells you that as well as inserting a completely missing an=mino acid (GLU275), alpha_loopfix also remediated a few residues either side of the missing one, to create an overall more reasonable geometry for the protein in this region.\n",
     "\n",
     "Let's take a look at the result:"
    ]
@@ -277,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abl_imatinib = mdt.load('abl_imatinib_heavy.pdb')\n",
+    "abl_imatinib = mdt.load('abl_complete.pdb')\n",
     "view = nv.show_mdtraj(abl_imatinib)\n",
     "view"
    ]
@@ -287,75 +294,7 @@
    "id": "0c0334d0-947b-4983-a6e1-bc5063bbf1db",
    "metadata": {},
    "source": [
-    "Take a good look, and convince yourself that the process has worked. Be aware that though `fix` works pretty well, it's not guaranteed to be perfect every time. You should always check the produced structure very carefully.\n",
-    "\n",
-    "The protein chain looks complete, however the structure contains bits we don't want - the imatinib ligand, and also (maybe not easy to see) some water molecules.\n",
-    "\n",
-    "We will use `mdtraj` to cut the model down to just the protein component, and save as a PDB format file. We'll also have a look to check:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dafc1059-dc62-40d5-a3d3-afdc97bf500f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abl = abl_imatinib.atom_slice(abl_imatinib.topology.select('protein'))\n",
-    "abl.save('abl_heavy.pdb')\n",
-    "view = nv.show_mdtraj(abl)\n",
-    "view.add_representation('licorice', 'protein')\n",
-    "view"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2e56ad7-37dd-4649-a4c5-9650df3eeca6",
-   "metadata": {},
-   "source": [
-    "If you zoom in you will be able to see there are no hydrogen atoms in this structure, just heavy atoms. The next step is to fix this."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9ceacfb-4ba9-4fa2-93a2-c5d13c953fa1",
-   "metadata": {},
-   "source": [
-    "### 2.3 Completion of the protein model - addition of hydrogen atoms."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db73a1e5-c7d5-4aa2-8982-aa8ceef36d9b",
-   "metadata": {},
-   "source": [
-    "There are a variety of methods to do this more-or-less automatically, but none is perfect - always check the results! Here we will use the CBA tool *add_h*, which in turn uses the molecular graphics package [Chimera](https://www.cgl.ucsf.edu/chimera/) (or the newer [ChimeraX](https://www.cgl.ucsf.edu/chimerax/)) and the \"pdb4amber\" utility from [ambertools](https://ambermd.org/AmberTools.php) . \n",
-    "\n",
-    "It requires are the names for the input and output PDB files, the command that will launch Chimera (or ChimeraX), and a decision as to whether names of protein residues should be adapted to fit **AMBER** conventions (we want this). In th next cell we run it then check the result visually:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17d6daab-1002-4f55-a12b-5a0cce51205c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_h('abl_heavy.pdb', 'abl_amber.pdb', \n",
-    "      chimera='chimerax',\n",
-    "      mode='amber')\n",
-    "abl_amber = mdt.load('abl_amber.pdb')\n",
-    "view2 = nv.show_mdtraj(abl_amber)\n",
-    "view2.add_representation('licorice', 'protein')\n",
-    "view2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4debc7c-ec49-432e-b76d-1980494eda31",
-   "metadata": {},
-   "source": [
-    "You should be able to see the structure now includes all the expected hydrogen atoms.\n",
+    "Take a good look, and convince yourself that the process has worked. Be aware that though `alpha_loopfix` and 'complete' work pretty well, they are not guaranteed to be perfect every time. You should always check the produced structure very carefully.\n",
     "\n",
     "With models for both the protein and ligand now made, the next step would most likely be to use **Docking** or a similar process to predict where in the structure of the protein the ligand binds. We are going to skip over that for now, assuming it has been done and a new model for the imatinib ligand is available: 'ligand_docked.pdb'. "
    ]
@@ -417,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abl = mdt.load_pdb('abl_amber.pdb', standard_names=False) # Keep AMBER-compliant names\n",
+    "abl = mdt.load_pdb('abl_complete.pdb', standard_names=False) # Keep AMBER-compliant names\n",
     "ligand = mdt.load_pdb('ligand_docked.pdb')\n",
     "abl_ligand = abl.stack(ligand)\n",
     "abl_ligand.save('abl_ligand.pdb')\n",
