--- a/protein_ligand_prep.ipynb
+++ b/protein_ligand_prep.ipynb
@@ -284,8 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abl_imatinib = mdt.load('abl_complete.pdb')\n",
-    "view = nv.show_mdtraj(abl_imatinib)\n",
+    "abl_complete = mdt.load('abl_complete.pdb')\n",
+    "view = nv.show_mdtraj(abl_complete)\n",
     "view"
    ]
   },
@@ -473,6 +473,26 @@
    "id": "6cc0df7b-169b-49d6-b30e-c095276b4c0a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fe55fc8-0c25-4c8c-bbb8-c7a5982aab75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp cba_tools.py ../../CompBioAsia/CBATools/src/cba_tools/cba_tool2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a121397-b312-4887-b163-26f8f70fe9dd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -492,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
